# github-social

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
src/: cli.ts  main.rs
