[package]
name = "github-followers"
version = "0.1.0"
authors = ["Yasuaki Uechi <y@uechi.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.102", features = ["derive"]}
serde_json = "1.0.41"
github-rs = "0.7.0"